apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: downloads
spec:
  ports:
    - port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
